<resources>
    <string name="app_name">GPSAPlant</string>
    <string name="action_settings">Settings</string>

    <string name="lblLatitude">Latitude</string>
    <string name="lblGPSpause">GPS Pause</string>
    <string name="lblGPResume">GPS Resume</string>
    <string name="lblLongtitude">Longtitude</string>
    <string name="lblZero">0.0</string>
    <string name="lblGPSAge">GPS Age</string>
    <string name="lblPlantname">Plant Name</string>
    <string name="lblLocation">Location</string>
    <string name="lblBlank" />
    <string name="btnShowSaved">Show Saved</string>
    <string name="lblTakePhoto">Take Photo</string>
    <string name="lblSave">Save</string>
    <string name="title_activity_color_capture">ColorCaptureActivity</string>
    <string name="lblTakeNewPhoto">Take New Photo</string>
    <string name="lblOpenExistingImage">Open existing image</string>
</resources>
